# test-3d-model

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp  model.cpp  model.h  shader.cpp  shader.h
